syntax = "proto3";

package event;

option go_package = "./;internalgrpc";

message Event {
  string id = 1;
  string title = 2;
  string description = 3;
  string start = 4;
  string end = 5;
  int32 owner_id = 6;
  string remind_before = 7;
}

message EventIdRequest {
  string id = 1;
}

message EventResponse {
  oneof result {
    string id = 1;
    string error = 2;
  }
}

message EventsRequest {
  string date = 1;
}

message EventsResponse {
  repeated Event events = 1;
}

service EventService {
  rpc Create(Event) returns (EventResponse);
  rpc Update(Event) returns (EventResponse);
  rpc Delete(EventIdRequest) returns (EventResponse);
  rpc GetByID(EventIdRequest) returns (Event);
  rpc DayEvents(EventsRequest) returns (EventsResponse);
  rpc WeekEvents(EventsRequest) returns (EventsResponse);
  rpc MonthEvents(EventsRequest) returns (EventsResponse);
}
